--- a/css/custom.css
+++ b/css/custom.css
@@ -7,8 +7,10 @@ body, p, a {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', sans-serif;
-}
 
+background-color: #181A1B;
+
+}
 body {
     color: #5a5a5a;
 }
