--- a/css/custom.css
+++ b/css/custom.css
@@ -11,6 +11,9 @@ h1, h2, h3, h4, h5, h6 {
 background-color: #181A1B;
 
 }
+body {
+    color: #5a5a5a;
+}
 
 .navbar-wrapper {
     position: absolute;
@@ -61,12 +64,12 @@ background-color: #181A1B;
 
 .home-title {
     font-size: 80px;
-    text-shadow: 3px 3px 0px #000;
+    text-shadow: 3px 3px 0px ;
 }
 
 .home-desc {
     font-size: 17px;
-    text-shadow: 2px 2px 0px #000;
+    text-shadow: 2px 2px 0px ;
     max-width: 40vw;
 }
 
