--- a/css/custom.css
+++ b/css/custom.css
@@ -18,6 +18,25 @@ body {
 .jumbotron {
     background-color: transparent;
   }
+  .navbar-default {
+ 
+    background-color: #69899f;
+   
+    border-color: #425766;
+   
+  }
+   
+  .navbar-default .navbar-brand {
+   
+    color: #d7e2e9;
+   
+  }
+   
+  .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+   
+    color: #e5dbdb;
+   
+  }
 
 .navbar-wrapper {
     position: absolute;
@@ -25,19 +44,16 @@ body {
     right: 0;
     left: 0;
     z-index: 20;
-    color: 1c1e1f;
 }
 
 .navbar-wrapper .container {
     padding-right: 0;
     padding-left: 0;
-    color: 1c1e1f;
 }
 
 .navbar-wrapper .navbar {
     padding-right: 15px;
     padding-left: 15px;
-    color: 1c1e1f;
 }
 
 .accent {
