--- a/css/custom.css
+++ b/css/custom.css
@@ -20,9 +20,9 @@ body {
   }
   .navbar-default {
  
-    background-color: #69899f;
+    background-color: #131516;
    
-    border-color: #425766;
+    border-color: #ffff;
    
   }
    
